--- a/priv/docroot/css/public.css
+++ b/priv/docroot/css/public.css
@@ -67,12 +67,24 @@ background-image: linear-gradient(to bottom,#f3f3f3 0,#e3e3e3 100%);}
 #mainPanel{width:889px;float:right;margin-left:-2px;padding:20px;border-left:1px solid #d3d3d3;}
 #mainPanel iframe{width: 100%;border:0;display: inline;}
 
-/*第一种框架-----------------------------------------------------------------------------------------------*/
-
+/*图表框样式*/
+.container{box-sizing: border-box;height:450px;font-size: 14px;line-height: 1.2em;border: 1px solid #ddd;background: #fff;margin-top:15px;padding: 20px 15px 15px 15px;
+background: linear-gradient(#f6f6f6 0, #fff 50px);
+background: -o-linear-gradient(#f6f6f6 0, #fff 50px);
+background: -ms-linear-gradient(#f6f6f6 0, #fff 50px);
+background: -moz-linear-gradient(#f6f6f6 0, #fff 50px);
+background: -webkit-linear-gradient(#f6f6f6 0, #fff 50px);
+box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+-o-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+-ms-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+-moz-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+-webkit-box-shadow: 0 3px 10px rgba(0,0,0,0.1);}
+.placeholder{width: 100%;height: 100%;font-size: 14px;line-height: 1.2em;}
+.legend table{border-spacing: 5px;}
 
 /*页面底部样式 -----------------------------------------*/
 #footer{background-color:#F7F7F7;border-top:1px solid #ddd;}
 #promote {text-align:center;margin-top:6px;font-size:12px;color:#999;}
 #promote a{color:#999;}
 #promote a:hover{color:#db0303;}
-/*页面底部样式 -----------------------------------------*/
+/*页面底部样式 -----------------------------------------
